アプリ名の修正

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MyApp",
-  "name": "My React App",
+  "short_name": "遠的",
+  "name": "遠的採点簿",
   "icons": [
     {
       "src": "favicon.ico",
